Upgrade project from Java 8 to Java 17
- Update pom.xml compiler source/target from 1.8 to 17
- Uncomment Jakarta XML Binding dependencies (jakarta.xml.bind-api, jaxb-runtime)
- Replace sun.misc.BASE64Encoder/Decoder with java.util.Base64
- Replace javax.xml.bind imports with jakarta.xml.bind in Application.java and Address.java
- Replace deprecated new Integer() constructor with Integer.valueOf()
- Remove unused IOException import

Co-Authored-By: Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>