@@ -1,14 +1,12 @@
 package java17demo.java8;
 
-import java.io.IOException;
 import java.nio.charset.Charset;
 
-import javax.xml.bind.JAXBContext;
-import javax.xml.bind.JAXBException;
-import javax.xml.bind.Marshaller;
+import jakarta.xml.bind.JAXBContext;
+import jakarta.xml.bind.JAXBException;
+import jakarta.xml.bind.Marshaller;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+import java.util.Base64;
 
 public class Application {
 	public static void main(String[] args) {
@@ -16,7 +14,7 @@ public class Application {
 		myAddress.setStreet("123 Main Street");
 		myAddress.setCity("Rochester");
 		myAddress.setState("MN");
-		myAddress.setZip(new Integer(55901).toString());
+		myAddress.setZip(Integer.valueOf(55901).toString());
 
 		// Convert the object to XML
 		writeXML(myAddress);
@@ -40,8 +38,8 @@ public class Application {
 	}
 
 	public static String encode(String originalString) {
-		BASE64Encoder encoder = new BASE64Encoder();
-		String encodedString = encoder.encode(originalString.getBytes());
+		Base64.Encoder encoder = Base64.getEncoder();
+		String encodedString = encoder.encodeToString(originalString.getBytes());
 		System.out.println("Original String: " + originalString);
 		System.out.println("Encoded String:  " + encodedString);
 		System.out.println("**************************************");
@@ -50,13 +48,8 @@ public class Application {
 
 	public static String decode(String encodedString) {
 		String decodedString = "";
-		try {
-			byte[] decodedBytes = new BASE64Decoder().decodeBuffer(encodedString);
-			decodedString = new String(decodedBytes, Charset.forName("UTF-8"));
-
-		} catch (IOException e) {
-			e.printStackTrace();
-		}
+		byte[] decodedBytes = Base64.getDecoder().decode(encodedString);
+		decodedString = new String(decodedBytes, Charset.forName("UTF-8"));
 		System.out.println("Encoded String:  " + encodedString);
 		System.out.println("Decoded String:  " + decodedString);
 		System.out.println("**************************************");
